feat: mastra update

--- a/mastra/package.json
+++ b/mastra/package.json
@@ -17,17 +17,17 @@
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^2.2.9",
-    "@ai-sdk/openai": "^1.3.22",
     "@aws-sdk/credential-providers": "^3.812.0",
-    "@mastra/core": "^0.9.4",
-    "@mastra/libsql": "^0.0.4",
-    "@mastra/memory": "^0.3.4",
+    "@mastra/core": "^0.10.1",
+    "@mastra/libsql": "^0.10.0",
+    "@mastra/loggers": "^0.10.0",
+    "@mastra/memory": "^0.10.1",
     "langfuse-vercel": "^3.37.3",
-    "zod": "^3.25.7"
+    "zod": "^3.25.32"
   },
   "devDependencies": {
-    "@types/node": "^22.15.19",
-    "mastra": "^0.6.3",
+    "@types/node": "^22.15.23",
+    "mastra": "^0.10.1",
     "typescript": "^5.8.3"
   }
 }
