chore: send mail

--- a/mastra/env.example
+++ b/mastra/env.example
@@ -6,5 +6,13 @@ SESSION_TOKEN=
 LANGFUSE_PUBLIC_KEY=
 LANGFUSE_SECRET_KEY=
 LANGFUSE_BASE_URL=
-# ApiKey
+# API-KEY
 BEARER_KEY=
+# LINE
+CHANNEL_ACCESS_TOKEN=
+# RESEND
+RESEND_API_KEY=
+# Supabase
+DATABASE_URL=
+# USER_ID
+USER_ID=
