--- a/mastra/package.json
+++ b/mastra/package.json
@@ -23,6 +23,8 @@
     "@mastra/loggers": "^0.10.0",
     "@mastra/memory": "^0.10.1",
     "langfuse-vercel": "^3.37.3",
+    "pg": "^8.16.0",
+    "resend": "^4.5.2",
     "zod": "^3.25.32"
   },
   "devDependencies": {
